Add missing expected html file